# syncoxiders

./: .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  Gemfile  README.md  SyncOxiders.pdf.REMOVED.git-id  _config.yml  about.markdown  syncoxide.rs.pdf.REMOVED.git-id
.github/workflows/: ci.yml  jekyll.yml
_layouts/: custom.html  default.html
apps/p2p-transfer/: Cargo.toml
apps/p2p-transfer/src/: lib.rs
file-change-consumer/: Cargo.toml
file-change-router/: Cargo.toml
file-tree-merge/: Cargo.toml
file-tree-merge/src/: apply_change.rs  change_tree.rs  change_tree_merge.rs  lib.rs  main.rs  path_walker.rs  tree_creator.rs
file-tree-merge/tests/scripts/: cleanup.sh  common.sh  setup.sh  tests.sh
file-tree-merge/tests/scripts/tests/: add.sh  add_modify_delete.sh  add_modify_delete_multiple_paths.sh  add_more.sh  delete.sh  delete_many.sh  dry-run.sh  modify.sh  modify_many.sh  no-crc.sh
file-tree-merge/tests/scripts/tests/large/: add_modify_delete.sh
file-tree-merge/tests/scripts/tests/small/: add_modify_delete.sh  add_modify_delete_multiple_paths.sh  delete.sh  no-crc.sh
file-watcher/: Cargo.toml
p2p-transfer/: .gitignore  Cargo.toml  index.html  rust-toolchain
p2p-transfer/assets/: sw.js
p2p-transfer/src/: app.rs  blob_store.rs  lib.rs  main.rs  node.rs  tests.rs
website/pages/: compare.md  features.md  how-it-works.md  name.md  poc-demo.md  stack.md  use-cases.md
website/pages/features/: analytics.md  antivirus.md  automation.md  backup.md  browser-app.md  cleanup.md  clients.md  email.md  emails.md  encrypt.md  global-view.md  integrations.md  large-files.md  links.md  local-app.md  local-view.md  photos.md  receive.md  receiving.md  search.md  share-external.md  share-local.md  share-provider.md  share-providers.md  status.md  supported-providers.md  sync-local.md  sync-providers.md  versioning.md
website/resources/: git-changes.mp4.REMOVED.git-id  git-rename.mp4.REMOVED.git-id
