[workspace]
members = ["file-change-consumer", "file-change-router", "file-tree-merge", "file-watcher", "p2p-transfer"]

resolver = "2"

[workspace.package]
description = "Cloud files Sync, Sharing, Backup and Encryption solution written in Rust."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Radu Marias <radumarias@gmail.com>"]
homepage = "https://github.com/radumarias/syncoxiders"
repository = "https://github.com/radumarias/syncoxiders"
readme = "README.md"
keywords = ["sync", "share", "cloud", "filesystem", "encryption"]
categories = ["cryptography", "filesystem"]
documentation = "https://docs.rs/syncoxiders"
exclude = [".github/"]

[profile.release]
panic = "abort"

[workspace.dependencies]
anyhow = { version = "1.0.44", features = ["backtrace"] }
colored = "2.1.0"
rayon = "^1.10.0"
