[workspace]
members = ["file-change-consumer", "file-change-router", "file-tree-merge", "file-watcher", "p2p-transfer"]
default-members = ["p2p-transfer"]

resolver = "2"

[workspace.package]
description = "Cloud files Sync, Sharing, Backup and Encryption solution written in Rust."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Radu Marias <radumarias@gmail.com>"]
homepage = "https://github.com/radumarias/syncoxiders"
repository = "https://github.com/radumarias/syncoxiders"
readme = "README.md"
keywords = ["sync", "share", "cloud", "filesystem", "encryption"]
categories = ["cryptography", "filesystem"]
documentation = "https://docs.rs/syncoxiders"
exclude = [".github/"]

[profile.release]
panic = "abort"

[workspace.dependencies]
colored = "2.1.0"
rayon = "^1.10.0"
anyhow = "1.0.80"
[patch.crates-io]
n0-watcher = { git = "https://github.com/anchalshivank/n0-watcher", branch = "feature/webrtc-wasm-support" }
netwatch = { git = "https://github.com/anchalshivank/net-tools", branch = "main" }
portmapper = { git = "https://github.com/anchalshivank/net-tools", branch = "main" }

[patch."https://github.com/anchalshivank/iroh"]
n0-watcher = { git = "https://github.com/anchalshivank/n0-watcher", branch = "feature/webrtc-wasm-support" }
netwatch = { git = "https://github.com/anchalshivank/net-tools", branch = "main" }
portmapper = { git = "https://github.com/anchalshivank/net-tools", branch = "main" }

[patch."https://github.com/anchalshivank/net-tools"]
n0-watcher = { git = "https://github.com/anchalshivank/n0-watcher", branch = "feature/webrtc-wasm-support" }
