[package]
name = "file-tree-merge"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
exclude.workspace = true

[[bin]]
name = "syncoxiders"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
colored.workspace = true
rayon.workspace = true

walkdir = "2.5.0"
chksum-md5 = "0.0.0"
git2 = "0.19.0"
slab_tree = "0.3.2"
tap = "1.0.1"
regex = "1"
clap = { version = "4", features = ["derive"] }
crc32fast = "1.3"
